Add /scripts/index.js, create array initialCards with name and photo link.

--- a/index.html
+++ b/index.html
@@ -112,5 +112,6 @@
       </main>
       <footer class="footer page__section">&copy; 2024 Around The U.S.</footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
