--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
       </main>
       <footer class="footer page__section">&copy; 2024 Around The U.S.</footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input
+            class="modal__input"
+            type="text"
+            name="profile-title"
+            id="profile-title"
+            placeholder="Jacques Cousteau"
+            required
+          />
+          <input
+            class="modal__input"
+            type="text"
+            name="profile-description"
+            id="profile-description"
+            placeholder="Explorer"
+            required
+          />
+        </form>
+        <button class="modal__button">Save</button>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
