--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button
+              class="profile__edit-button"
+              id="profile-edit-button"
+              type="button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button"></button>
@@ -112,9 +116,9 @@
       </main>
       <footer class="footer page__section">&copy; 2024 Around The U.S.</footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close"></button>
+        <button class="modal__close" id="profile-edit-close"></button>
         <p class="modal__heading">Edit Profile</p>
         <form class="modal__form">
           <input
@@ -122,7 +126,7 @@
             type="text"
             name="profile-title"
             id="profile-title"
-            placeholder="Jacques Cousteau"
+            placeholder="Name"
             required
           />
           <input
@@ -130,7 +134,7 @@
             type="text"
             name="profile-description"
             id="profile-description"
-            placeholder="Explorer"
+            placeholder="Description"
             required
           />
         </form>
