--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             class="modal__input"
             type="text"
             name="profile-title"
-            id="profile-title"
+            id="profile-title-input"
             placeholder="Name"
             required
           />
@@ -133,12 +133,12 @@
             class="modal__input"
             type="text"
             name="profile-description"
-            id="profile-description"
+            id="profile-description-input"
             placeholder="Description"
             required
           />
+          <button type="submit" class="modal__button">Save</button>
         </form>
-        <button class="modal__button">Save</button>
       </div>
     </div>
     <script src="./scripts/index.js"></script>
