--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
-        <section class="gallery page__section"></section>
+        <section class="gallery page__section" id="gallery-cards"></section>
       </main>
       <footer class="footer page__section">&copy; 2024 Around The U.S.</footer>
     </div>
