--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="modal__container">
         <button class="modal__close" id="profile-edit-close"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form" id="profile-edit-form">
+        <form class="modal__form" id="profile-edit-form" novalidate>
           <input
             class="modal__input"
             type="text"
@@ -53,7 +53,11 @@
             id="profile-title-input"
             placeholder="Name"
             required
+            minlength="2"
+            maxlength="40"
           />
+          <span class="profile-title-input-error modal__input-error"></span>
+
           <input
             class="modal__input"
             type="text"
@@ -61,8 +65,13 @@
             id="profile-description-input"
             placeholder="Description"
             required
+            minlength="2"
+            maxlength="200"
           />
-          <button type="submit" class="modal__button">Save</button>
+          <span
+            class="profile-description-input-error modal__input-error"
+          ></span>
+          <button type="submit" class="modal__submit">Save</button>
         </form>
       </div>
     </div>
@@ -72,7 +81,7 @@
       <div class="modal__container">
         <button class="modal__close" id="gallery-edit-close"></button>
         <p class="modal__heading">New place</p>
-        <form class="modal__form" id="gallery-add-form">
+        <form class="modal__form" id="gallery-add-form" novalidate>
           <input
             class="modal__input"
             type="text"
@@ -81,15 +90,17 @@
             placeholder="Title"
             required
           />
+          <span class="gallery-title-input-error modal__input-error"></span>
           <input
             class="modal__input"
-            type="text"
+            type="url"
             name="url"
             id="gallery-url-input"
-            placeholder="Image link"
+            placeholder="Image URL"
             required
           />
-          <button type="submit" class="modal__button">Create</button>
+          <span class="gallery-url-input-error modal__input-error"></span>
+          <button type="submit" class="modal__submit">Save</button>
         </form>
       </div>
     </div>
@@ -122,5 +133,6 @@
     </template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
