feat(invalidate submit): inactivate submit button in modals until all fields valid

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
             class="modal__input_type_error"
             id="profile-description-input-error"
           ></span>
-          <button type="submit" class="modal__submit">Save</button>
+          <button
+            type="submit"
+            class="modal__submit modal__submit_inactive"
+            disabled
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
