--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
             <span class="modal__error" id="gallery-url-input-error"></span>
           </label>
 
-          <button type="submit" class="modal__submit">Save</button>
+          <button type="submit" class="modal__submit" id="gallery-modal-submit">
+            Save
+          </button>
         </form>
       </div>
     </div>
@@ -151,6 +153,6 @@
     </template>
 
     <script src="./scripts/validation.js"></script>
-    <script type="module" src="./scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
