--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
     </template>
 
     <script src="./scripts/validation.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script src="./pages/index.js"></script>
   </body>
 </html>
