refactor/Card_class added and implemented

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
 
-    <!-- card Card Template -->
+    <!-- Gallery Card Template -->
     <template id="card-instance-template">
       <div class="card__instance">
         <img src="" alt="" class="card__image" />
@@ -149,21 +149,6 @@
       </div>
     </template>
 
-    <!-- template markup from video
-     <template id="card-template">
-      learned about in sprint 5
-      <li class="card">
-        <img class="card__image" src="" alt=""/>
-        <button class="card__delete-button" type="button"></button>
-        Background, inline style
-        <div class="card__description">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
-        </div>
-      </li>
-    </template> -->
-
-    <!-- <script src="./scripts/validation.js"></script> -->
-    <script src="./pages/index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
