--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input
               class="modal__input"
               type="text"
-              name="profile-title"
+              name="profileTitle"
               id="profile-title-input"
               placeholder="Name"
               required
@@ -66,7 +66,7 @@
             <input
               class="modal__input"
               type="text"
-              name="profile-description"
+              name="profileDescription"
               id="profile-description-input"
               placeholder="Description"
               required
@@ -100,7 +100,7 @@
             <input
               class="modal__input"
               type="text"
-              name="card-title"
+              name="cardTitle"
               id="card-title-input"
               placeholder="Title"
               required
@@ -113,7 +113,7 @@
             <input
               class="modal__input"
               type="url"
-              name="url"
+              name="imageUrl"
               id="card-url-input"
               placeholder="Image URL"
               required
