refactor; finalize webpack, organize code for readability, update README for Sprint 8

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <div class="page__wrapper">
       <header class="header">
         <img
-          id="imageLogoPng"
-          src="<%=require('.src/images/logo.svg')%>"
+          id="imageLogoSvg"
+          src="<%=require('./images/logo.svg')%>"
           alt="Around the U.S. logo"
           class="header__logo"
         />
@@ -22,7 +22,7 @@
         <section class="profile page__section">
           <img
             id="imageProfile"
-            src="<%=require('.src/images/jacques-cousteau.jpg')%>"
+            src="<%=require('./images/jacques-cousteau.jpg')%>"
             alt="Avatar"
             class="profile__image"
           />
