debug+refactor: listener reset for esc event, improve scalability for Card and FormValidator initializations

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       <div class="modal__container">
         <button class="modal__close" id="profile-edit-close"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form" id="profile-edit-form" novalidate>
+        <form class="modal__form" id="profile-edit-form" name="profileEditForm">
           <label class="modal__label">
             <input
               class="modal__input"
@@ -97,7 +97,7 @@
       <div class="modal__container">
         <button class="modal__close" id="card-edit-close"></button>
         <p class="modal__heading">New place</p>
-        <form class="modal__form" id="card-edit-form" novalidate>
+        <form class="modal__form" id="card-edit-form" name="cardEditForm">
           <label class="modal__label">
             <input
               class="modal__input"
