refactor for API, add confirmation for delete card

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,15 @@
           <div class="profile__image-div">
             <img
               id="imageProfile"
-              src="<%=require('./images/jacques-cousteau.jpg')%>"
+              src=""
               alt="Avatar"
               class="profile__image-pic"
             />
-            <button class="profile__image-edit"></button>
-            <!-- the edit pencil needs to sit over top of the above image -->
+            <!-- src above: src="<%=require('./images/jacques-cousteau.jpg')%>" -->
+            <button
+              class="profile__image-edit"
+              id="profile-image-edit-button"
+            ></button>
           </div>
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
@@ -37,7 +40,7 @@
               id="profile-edit-button"
               type="button"
             ></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__about">Explorer</p>
           </div>
           <button
             class="profile__card-edit-button"
@@ -49,28 +52,27 @@
       <footer class="footer page__section">&copy; 2024 Around The U.S.</footer>
     </div>
 
-    <!-- Profile Pic Edit modal -->
-    <div class="modal" id="profile-pic-edit-modal">
-      <!-- I might need a totally new class for this modal - styling does not match the form stuff since there's only one input -->
+    <!-- Avatar Edit modal -->
+    <div class="modal" id="avatarModal">
       <div class="modal__container">
         <button class="modal__close" id="profile-pic-edit-close"></button>
         <p class="modal__heading">Change profile picture</p>
         <form
           class="modal__form"
           id="profile-pic-edit-form"
-          name="profilePicEditForm"
+          name="avatarEditForm"
         >
           <label class="modal__label">
             <input
               class="modal__input"
               type="url"
-              name="profileImageUrl"
-              id="profile-pic-url-input"
+              name="avatarInput"
+              id="avatarUrlInput"
               placeholder="Image URL"
               required
             />
-            <!-- check the validation info above -->
-            <span class="modal__error" id="profile-pic-url-input-error"></span>
+
+            <span class="modal__error" id="avatarUrlInputError"></span>
           </label>
 
           <button
@@ -85,8 +87,8 @@
       </div>
     </div>
 
-    <!-- Profile Edit modal -->
-    <div class="modal" id="profile-edit-modal">
+    <!-- Profile Edit modal-->
+    <div class="modal" id="profileModal">
       <div class="modal__container">
         <button class="modal__close" id="profile-edit-close"></button>
         <p class="modal__heading">Edit Profile</p>
@@ -95,30 +97,28 @@
             <input
               class="modal__input"
               type="text"
-              name="profileTitle"
-              id="profile-title-input"
+              name="nameInput"
+              id="nameInput"
               placeholder="Name"
               required
               minlength="2"
               maxlength="40"
             />
-            <span class="modal__error" id="profile-title-input-error"></span>
+
+            <span class="modal__error" id="nameInputError"></span>
           </label>
           <label class="modal__label">
             <input
               class="modal__input"
               type="text"
-              name="profileDescription"
-              id="profile-description-input"
-              placeholder="Description"
+              name="aboutInput"
+              id="aboutInput"
+              placeholder="About"
               required
               minlength="2"
               maxlength="200"
             />
-            <span
-              class="modal__error"
-              id="profile-description-input-error"
-            ></span>
+            <span class="modal__error" id="aboutInputError"></span>
           </label>
 
           <button
@@ -133,7 +133,7 @@
     </div>
 
     <!-- Card Edit modal -->
-    <div class="modal" id="card-edit-modal">
+    <div class="modal" id="cardAddModal">
       <div class="modal__container">
         <button class="modal__close" id="card-edit-close"></button>
         <p class="modal__heading">New place</p>
@@ -143,24 +143,24 @@
               class="modal__input"
               type="text"
               name="cardTitle"
-              id="card-title-input"
+              id="cardTitleInput"
               placeholder="Title"
               required
               minlength="2"
               maxlength="30"
             />
-            <span class="modal__error" id="card-title-input-error"></span>
+            <span class="modal__error" id="cardTitleInputError"></span>
           </label>
           <label class="modal__label">
             <input
               class="modal__input"
               type="url"
               name="imageUrl"
-              id="card-url-input"
+              id="cardUrlInput"
               placeholder="Image URL"
               required
             />
-            <span class="modal__error" id="card-url-input-error"></span>
+            <span class="modal__error" id="cardUrlInputError"></span>
           </label>
 
           <button type="submit" class="modal__submit" id="card-modal-submit">
@@ -171,18 +171,16 @@
     </div>
 
     <!-- Card Delete Modal -->
-    <div class="modal" id="card-delete-modal">
-      <!-- add modal_opened to the above div via js -->
-      <!-- I might need a totally new class for this modal - styling does not match the form stuff since there's no input -->
+    <div class="modal" id="cardDeleteModal">
       <div class="modal__container">
         <button class="modal__close" id="card-delete-close"></button>
-        <p class="modal__heading">Are you sure?</p>
-        <!-- do i need the form or just the button? -->
+        <p class="modal__heading-delete">Are you sure?</p>
         <form class="modal__form" id="card-delete-form" name="cardDeleteForm">
-          <!-- there is no validation on this one -->
-          <!-- is this a submit, do I need a new class? -->
-          <button type="submit" class="modal__submit" id="card-delete-submit">
-            <!-- removed (above) class that disables and the disabled (flag?) -->
+          <button
+            type="submit"
+            class="modal__submit modal__delete-btn"
+            id="card-delete-submit"
+          >
             Yes
           </button>
         </form>
@@ -190,11 +188,10 @@
     </div>
 
     <!-- Preview Image Modal -->
-    <div class="modal" id="preview-image-modal">
+    <div class="modal" id="cardDisplayModal">
       <div class="modal__container modal__container_type_preview">
         <button class="modal__close" id="preview-image-close"></button>
         <img src="" alt="" class="modal__image" />
-        <!-- do I need to add an id="" to the above? -->
         <p class="modal__text"></p>
       </div>
     </div>
@@ -203,7 +200,6 @@
     <template id="card-instance-template">
       <div class="card__instance">
         <img src="" alt="" class="card__image" />
-        <!-- do I need to add an id="" to the above? -->
         <button class="card__delete-button" id="card-delete-button"></button>
         <div class="card__description">
           <h2 class="card__text"></h2>
